# spoti2py

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  _handlers.py  album.py  artist.py  audio_analysis.py  client.py  image.py  pyproject.toml  requirements.txt  res.json  search.py  song.py  tests.py  tonality.py  track.py  utils.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
exceptions/: __init__.py  exceptions.py
models/: __init__.py  _tonality.py  album.py  artist.py  audio_analysis.py  image.py  search.py  tonality.py  track.py
spoti2py/: client.py  utils.py
spoti2py/exceptions/: __init__.py  exceptions.py
spoti2py/models/: __init__.py  album.py  artist.py  image.py  recommendations.py  search.py  track.py
